# birthday-emailer

./: config.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  models.py  routes.py  seed.py  tasks.py  utils.py
app/templates/: add.html  edit.html  index.html
data/: birthday_project.csv
instance/: db.sqlite
